--- a/src/index.css
+++ b/src/index.css
@@ -87,6 +87,24 @@ input[type='text']:focus {
   margin-bottom: 10px;
 }
 
+/* ABOUT_PAGE COMPONENT */
+.about-container {
+  font-size: 18px;
+  width: 65%;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  padding: 15px 30px;
+  font-weight: 500;
+  border-radius: 8px;
+  box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.3);
+  background: linear-gradient(
+    to bottom right,
+    rgba(91, 204, 246, 0.7),
+    rgba(91, 204, 246, 0.4)
+  );
+}
+
 /* SINGLE_ITEM COMPONENT*/
 .task-display {
   display: flex;
@@ -95,6 +113,8 @@ input[type='text']:focus {
 
 .delete-task-icon {
   cursor: pointer;
+  background: none;
+  border: none;
 }
 
 /* ABOUT_ICON_LINK */
@@ -143,3 +163,19 @@ input[type='text']:focus {
     opacity: 1;
   }
 }
+
+/* .fade-out {
+  animation-name: FadeOut;
+  animation-duration: 5s;
+  animation-timing-function: ease;
+  background-color: red;
+}
+
+@keyframes FadeOut {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+  }
+} */
