--- a/src/index.css
+++ b/src/index.css
@@ -45,9 +45,20 @@ header p {
   border-radius: 30px;
 
   justify-content: space-between;
-  margin-bottom: 30px;
+  margin-bottom: 15px;
 
   background-color: rgba(252, 222, 103, 0.9);
+
+  animation: forAddBar 1.8s linear;
+}
+
+@keyframes forAddBar {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
 
 input {
@@ -68,7 +79,7 @@ input[type='text']:focus {
 }
 
 .btn-add {
-  box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.6);
+  box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.4);
   transition: all 0.4s ease;
 }
 
@@ -78,7 +89,13 @@ input[type='text']:focus {
 
 .btn-add:active {
   transform: scale(0.98);
-  box-shadow: 1px 1px rgba(0, 0, 0, 0.3);
+  box-shadow: 1px 1px rgba(0, 0, 0, 0.4);
+}
+
+.select-priority-msg {
+  text-align: center;
+  font-size: 16px;
+  font-weight: 500;
 }
 
 .no-input-message {
@@ -87,8 +104,76 @@ input[type='text']:focus {
   margin-bottom: 10px;
 }
 
+/* Priority_select */
+
+.priority {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  margin: 15px 0 30px;
+  list-style-type: none;
+  animation: moveInLeft 1s ease-out;
+}
+
+@keyframes moveInLeft {
+  0% {
+    opacity: 0;
+    transform: translatex(-100px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+
+.priority li {
+  position: relative;
+  background: #f4f4f4;
+  width: 50px;
+  height: 50px;
+  padding: 10px;
+  text-align: center;
+  border-radius: 50%;
+  font-size: 19px;
+  border: 1px #eee solid;
+  transition: 0.3s;
+}
+
+.priority li label {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 50px;
+  height: 50px;
+  padding: 10px;
+  border-radius: 50%;
+  transform: translate(-50%, -50%);
+  cursor: pointer;
+}
+
+.priority li:hover {
+  background-color: rgba(91, 204, 246, 0.9);
+  transform: translateY(-5px);
+  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.3);
+}
+
+.priority li:active {
+  transform: translateY(-2px);
+  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.3);
+}
+
+[type='radio'] {
+  opacity: 0;
+}
+
+[type='radio']:checked ~ label {
+  background-color: rgba(91, 204, 246, 0.9);
+  color: #000;
+}
+
 /* ABOUT_PAGE COMPONENT */
 .about-container {
+  position: relative;
   font-size: 18px;
   width: 65%;
   display: flex;
@@ -103,18 +188,27 @@ input[type='text']:focus {
     rgba(91, 204, 246, 0.7),
     rgba(91, 204, 246, 0.4)
   );
+  padding-bottom: 70px;
 }
 
 /* SINGLE_ITEM COMPONENT*/
 .task-display {
+  position: relative;
   display: flex;
   justify-content: space-between;
 }
 
 .delete-task-icon {
+  position: absolute;
   cursor: pointer;
   background: none;
   border: none;
+  top: 67%;
+  right: -17px;
+}
+
+.task-priority {
+  font-size: 1rem;
 }
 
 /* ABOUT_ICON_LINK */
@@ -164,18 +258,31 @@ input[type='text']:focus {
   }
 }
 
-/* .fade-out {
-  animation-name: FadeOut;
-  animation-duration: 5s;
-  animation-timing-function: ease;
-  background-color: red;
+/* ABOUT-PAGE */
+.back-home-link:link,
+.back-home-link:visited {
+  position: absolute;
+  text-decoration: none;
+  color: inherit;
+  display: inline-block;
+  margin-top: 10px;
+  background-color: rgba(91, 204, 246, 1);
+  color: #000;
+  padding: 8px 10px;
+  border-radius: 100px;
+  transition: all 0.4s ease;
+  text-align: center;
+  left: 50%;
+  transform: translateX(-50%);
 }
 
-@keyframes FadeOut {
-  from {
-    opacity: 1;
-  }
-  to {
-    opacity: 0;
-  }
-} */
+.back-home-link:hover {
+  /* transform: translateY(-2px); */
+  box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.3);
+}
+
+.back-home-link:active {
+  color: #000;
+  /* transform: translateY(-2px); */
+  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.3);
+}
