--- a/src/index.css
+++ b/src/index.css
@@ -244,19 +244,19 @@ input[type='text']:focus {
   font-size: 20px;
   font-weight: 500;
 
-  animation-name: FadeIn;
+  /* animation-name: FadeIn; */
   animation-duration: 1s;
   animation-timing-function: ease;
 }
 
-@keyframes FadeIn {
+/* @keyframes FadeIn {
   from {
     opacity: 0;
   }
   to {
     opacity: 1;
   }
-}
+} */
 
 /* ABOUT-PAGE */
 .back-home-link:link,
